--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "next-intl": "^4.3.5",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
