--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "greyber-portfolio",
+  "homepage": "https://greybersojo.github.io/Greyber-Portfolio/",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -43,6 +44,7 @@
     "eslint-config-next": "15.4.6",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.2.0",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
