--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint:fix": "next lint --fix",
     "analyze": "ANALYZE=true next build",
     "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "lint": "next lint",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
