--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "lint:fix": "next lint --fix",
     "analyze": "ANALYZE=true next build",
-    "dev": "next dev --turbopack",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "lint": "next lint",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "export": "next export",
+    "predeploy": "npm run build && npm run export",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
