--- a/package.json
+++ b/package.json
@@ -51,5 +51,12 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
-  }
+  },
+  "tailwindcss": "^4.0.0",
+  "@tailwindcss/postcss": "^4.0.0",
+  "postcss": "^8.4.31",
+  "autoprefixer": "^10.4.20",
+  "next": "^14.2.0",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0"
 }
